--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div align="center">
     <h1>Waaw, Congratulations aws training . how are you</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
+    <h1>this class demo for code deployment. we are using ec2 instace as a compute </h1>
     
   </div>
 </body>
