--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
   <div align="center">
-    <h1>Waaw, Congratulations aws training . how are you</h1>
+    <h1>Congratulations aws training.</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <h1>this class demo for code deployment. we are using ec2 instace as a compute </h1>
+    <h1>this class demo for code deploy. we are using ec2 instace as a compute service </h1>
     
   </div>
 </body>
